SimpleComplex/Filter 1.x, 2017-05-23
------------------------------------
- Parameter/return type declarations (Validate only, so far).
- numeric() now returns 'integer'/'float' on pass.
- ValidateByRules new 'alternativeEnum' pseudo-rule replaces similar which only
  worked when the var was empty().

SimpleComplex/Filter 1.x, 2017-05-22
------------------------------------
- Initial design complete, however not tested.